# ComfyUI_SignalProcessing

./: .gitignore  CREDITS.md  README.md  SignalProcessingFilter.py  SignalProcessingLoadAudio.py  SignalProcessingMixdown.py  SignalProcessingMultiBandEQ.py  SignalProcessingMultiBandEQExperimental.py  SignalProcessingPadSynth.py  SignalProcessingPadSynthChoir.py  SignalProcessingPadSynthChoir2.py  SignalProcessingPaulStretch.py  SignalProcessingSpectrogram.py  SignalProcessingStereoWidening.py  SignalProcessingVolumeControl.py  SignalProcessingWaveform.py  __init__.py  nodes.py  noxfile.py  pyproject.toml  requirements.txt
core/: compression.py  conversions.py  filters.py  harmonics.py  io.py  limiting.py  loudness.py  matching.py  mixing.py  plotting.py  sampling.py  saturation.py  spectral.py  tests.py  utilities.py  utilitiescuda.py  widening.py
effects/: SignalProcessingConvolutionReverb.py  SignalProcessingPaulStretch.py  SignalProcessingPitchShifter.py  SignalProcessingStereoWidening.py
generators/: SignalProcessingPadSynth.py  SignalProcessingPadSynthChoir.py
processors/: SignalProcessingBaxandallEQ.py  SignalProcessingCompressor.py  SignalProcessingFilter.py  SignalProcessingHarmonicsEnhancer.py  SignalProcessingLimiter.py  SignalProcessingLoadAudio.py  SignalProcessingLoudness.py  SignalProcessingMixdown.py  SignalProcessingNormalizer.py  SignalProcessingSaturation.py
tests/: conftest.py  test_baxandall.py  test_compressor.py  test_convolution_reverb.py  test_filter.py  test_harmonics.py  test_limiting.py  test_normalizer.py  test_padsynthchoir.py  (+5 more)
(+9 files in other folders)
