[project]
name = "ComfyUI_SignalProcessing"
description = "Audio processing nodes for comfyui."
version = "0.0.2"
license = { file = "LICENSE-GPL-V3" }

[project.urls]
Repository = "https://github.com/c0ffymachyne/ComfyUI_SignalProcessing"

[tool.comfy]
PublisherId = "c0ffymachyne"
DisplayName = "ComfyUI_SignalProcessing"
Icon = "images/icon.jpg"
Models = []

[project.dependencies] 
torch = [
    "--index-url",
    "https://download.pytorch.org/whl/cu118",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchvision==0.19.1"
]
other = [
    "numpy>=1.23.0",
    "scipy>=1.5.0",
    "pyfar",
    "scipy",
    "pyloudnorm",
    "cupy"
]